k8s/rsky-feedgen/httproute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rsky-feedgen-https
  namespace: atproto
spec:
  parentRefs:
    - name: feedgen-gateway
      sectionName: https
  hostnames:
    - feed.know-me.tools
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rsky-feedgen
          port: 3000
