k8s/rsky-feedgen/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rsky-feedgen-http-redirect
  namespace: atproto
spec:
  parentRefs:
    - name: feedgen-gateway
      sectionName: http
  hostnames:
    - feed.know-me.tools
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
